@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -75,7 +75,7 @@ public class ThiessenPolygonsLayer extends MapLayer {
                             && markerPosition.x < bottomRight.x
                             && markerPosition.y < bottomRight.y;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         onScreenMarkerCount = onScreenMarkers.size();
 
