@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,6 +30,7 @@ import java.io.InputStream;
 import java.io.OutputStreamWriter;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -102,11 +103,11 @@ public abstract class RestClient {
                     }
                     query.append(String.format("%s=%s", key, value));
                 } else {
-                    LOGGER.info(String.format("Unable to add rest key/value: %s=%s to URL=%s", key, value, url));
+                    LOGGER.log(Level.INFO, "{0}", String.format("Unable to add rest key/value: %s=%s to URL=%s", key, value, url));
                 } 
             }
         }
-        return new URL(url + (query.length() > 0 ? "?" + query : ""));
+        return URI.create(url + (query.length() > 0 ? "?" + query : "")).toURL();
     }
 
     /**
